--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body{
   color: rgba(255, 255, 255, 0.766);
   font-weight: bolder;
 }
-@media(max-width:1110px){
+@media screen and (max-width:1110px){
   .mainTextBox1{
     font-size: 1.65rem;
     padding: 1.8rem 1rem;
@@ -109,7 +109,7 @@ body{
 
 }
 
-@media(max-width:941px){
+@media screen and (max-width:941px){
 
   .mainTextBox1{
     font-size: 1.55rem;
@@ -124,7 +124,7 @@ body{
    
   }
 }
-@media(max-width:890px){
+@media screen and (max-width:890px){
 
   .mainTextBox1{
     font-size: 1.45rem;
@@ -139,7 +139,7 @@ body{
    
   }
 }
-@media(max-width:820px){
+@media screen and (max-width:820px){
 
   .mainTextBox1{
     font-size: 1.35rem;
@@ -154,7 +154,7 @@ body{
    
   }
 }
-@media(max-width:768px){
+@media screen and (max-width:768px){
 
 
   .mainTextBox1{
@@ -171,7 +171,7 @@ body{
   }
 
 }
-@media(max-width:700px){
+@media screen and (max-width:700px){
 
   .mainTextBox1{
     font-size: 0.8rem;
@@ -187,7 +187,7 @@ body{
   }
 }
 
-@media(max-width:468px){
+@media screen and (max-width:468px){
 
   .mainTextBox1{
     font-size: 0.7rem;
@@ -204,7 +204,7 @@ body{
     
   }
 }
-@media(max-width:420px){
+@media screen and (max-width:420px){
 
   .mainTextBox1{
     font-size: 0.6rem;
@@ -223,7 +223,7 @@ body{
  
 
 }
-@media(max-width:392px){
+@media screen and (max-width:392px){
 
   .mainTextBox1{
     font-size: 0.6rem;
@@ -302,7 +302,7 @@ body{
   border-radius: 4px;
   
 }
-@media(max-width:1290px){
+@media screen and (max-width:1290px){
  
   
   .contentBox1 h1{
@@ -341,7 +341,7 @@ body{
   }
   
 } 
-@media(max-width:1030px){
+@media screen and (max-width:1030px){
  
   
   .contentBox1 h1{
@@ -376,7 +376,7 @@ body{
   }
   
 } 
-@media(max-width:862px){
+@media screen and (max-width:862px){
   .contentBox1{
     width: 42%; 
   }
@@ -425,7 +425,7 @@ body{
   }
   
 } 
-@media(max-width:780px){
+@media screen and (max-width:780px){
  
   
 
@@ -452,7 +452,7 @@ body{
 
 } 
 
-@media(max-width:700px){
+@media screen and (max-width:700px){
 
   .contentBox1 h1{
     margin-top: 3px;
@@ -493,7 +493,7 @@ body{
 
 
 }
-@media(max-width:480px){
+@media screen and (max-width:480px){
   .content1{
     padding-bottom:0rem ;
    
@@ -542,7 +542,7 @@ body{
   
 
 }
-@media(max-width:400px){
+@media screen and (max-width:400px){
   .content1{
     padding-bottom:0rem ;
    
@@ -611,7 +611,7 @@ body{
     top:5px;
   }
 }
-@media(max-width:400px){
+@media screen and (max-width:400px){
 
    .contentBox1 h1{
     margin-top: -9px;
@@ -664,7 +664,7 @@ body{
    font-weight: bolder;
   
 }
-@media(max-width:926px){
+@media screen and (max-width:926px){
   
   .info1 h1{
     font-size: 2rem;
@@ -684,7 +684,7 @@ body{
     
   }
 }
-@media(max-width:780px){
+@media screen and (max-width:780px){
   
   .impDatesBox1{
     gap:1.15rem;
@@ -707,7 +707,7 @@ body{
     
   }
 }
-@media(max-width:630px){
+@media screen and (max-width:630px){
 .impDates1{
  padding-left: 1.3rem;
 }
@@ -732,7 +732,7 @@ body{
     
   }
 }
-@media(max-width:545px){
+@media screen and (max-width:545px){
 .impDates1{
  padding-left: 1.3rem;
 }
@@ -757,7 +757,7 @@ body{
     
   }
 }
- @media(max-width:495px){
+ @media screen and (max-width:495px){
 .impDates1{
 padding-left: 0.7rem;
 }
@@ -787,7 +787,7 @@ padding-left: 0.7rem;
     
   }
 }
-@media(max-width:425px){
+@media screen and (max-width:425px){
 .impDates1{
 padding-left: 0.7rem;
 }
@@ -815,7 +815,7 @@ padding-left: 0.7rem;
     
   }
 }
-@media(max-width:390px){
+@media screen and (max-width:390px){
 .impDates1{
 padding-left: 0.5rem;
 }
