--- a/style.css
+++ b/style.css
@@ -599,8 +599,9 @@ body{
    
   }
   .contentBox3imgb{
+   margin-top:3px;
     width: 100%;
-    height: 85%;
+    height: 84%;
     border-radius: 5px;
     position: relative;
   
@@ -899,7 +900,7 @@ padding-left: 0.5rem;
 }
 
 .img-sec-2 {
-    background-image: url("./Images/Screenshot1.png");
+    background-image: url("https://i.postimg.cc/FFjYzWfV/Screenshot1.png");
     width: 100%;
     height: 400px;
     background-position-y: 35%;
